--- a/src/public/json/reason.json
+++ b/src/public/json/reason.json
@@ -8,20 +8,20 @@
     "6": "で太陽をはたき落とそうとしていたら",
     "7": "で恋に落ちていく予感を感じていたら",
     "8": "でフェロモンを分泌していたら",
-    "9": "で生物の瞳に映る僕を見ていたら",
-    "10": "で僕のファンから隠れていたら",
-    "11": "で僕の熱い眼差しで卵を暖めていたら",
+    "9": "で生物の瞳に映る俺を見ていたら",
+    "10": "で俺のファンから隠れていたら",
+    "11": "で俺の熱い眼差しで卵を暖めていたら",
     "12": "明日に向かって希望を抱いていたら"
   },
   "reason":{
     "1":"飼っているペンギンが飛んで逃げたので探していたため",
-    "2":"僕の美貌で心肺停止したため",
-    "3":"僕の歩むべき道を邪魔して来たため",
-    "4":"テスト２",
-    "5":"テスト３",
-    "6":"テスト4",
-    "7":"テスト5",
-    "8":"テスト6",
-    "9":"テスト7"
+    "2":"俺の魅力で心肺停止したため",
+    "3":"俺の歩むべき道を邪魔して来たため",
+    "4":"俺の周りを人間が群がって来たため",
+    "5":"俺自身の輝きを隠せずにいたため",
+    "6":"俺の尊さに空が泣いていたため",
+    "7":"全ての生物の本能が俺を欲っしていたため",
+    "8":"風が嫉妬して僕をこれ以上前に進めせてくれなかったため",
+    "9":"サインを求められて女が群がっていたため"
   }
 }
