--- a/src/public/json/reason.json
+++ b/src/public/json/reason.json
@@ -1,27 +1,27 @@
 {
   "do": {
-    "1": "で幸せを集めていたら",
-    "2": "で君のことを想っていたら",
-    "3": "でししゃもを食べていたら",
-    "4": "で夢に向かってがむしゃらにしていたら",
-    "5": "でただただ夕日を追いかけて走っていたら",
-    "6": "で太陽をはたき落とそうとしていたら",
-    "7": "で恋に落ちていく予感を感じていたら",
-    "8": "でフェロモンを分泌していたら",
-    "9": "で生物の瞳に映る俺を見ていたら",
-    "10": "で俺のファンから隠れていたら",
-    "11": "で俺の熱い眼差しで卵を暖めていたら",
+    "1": "幸せを集めていたら",
+    "2": "君のことを想っていたら",
+    "3": "ししゃもを食べていたら",
+    "4": "夢に向かってがむしゃらにしていたら",
+    "5": "ただただ夕日を追いかけて走っていたら",
+    "6": "太陽をはたき落とそうとしていたら",
+    "7": "恋に落ちていく予感を感じていたら",
+    "8": "フェロモンを分泌していたら",
+    "9": "生物の瞳に映る俺を見ていたら",
+    "10": "俺のファンから隠れていたら",
+    "11": "俺の熱い眼差しで卵を暖めていたら",
     "12": "明日に向かって希望を抱いていたら"
   },
   "reason": {
-    "1": "飼っているペンギンが飛んで逃げたので探していたため",
-    "2": "俺の魅力で心肺停止したため",
-    "3": "俺の歩むべき道を邪魔して来たため",
-    "4": "俺の周りを人間が群がって来たため",
-    "5": "俺自身の輝きを隠せずにいたため",
-    "6": "俺の尊さに空が泣いていたため",
-    "7": "全ての生物の本能が俺を欲っしていたため",
-    "8": "風が嫉妬して僕をこれ以上前に進めせてくれなかったため",
-    "9": "サインを求められて女が群がっていたため"
+    "1": "飼っているペンギンが飛んで逃げたので探していた",
+    "2": "俺の魅力で心肺停止した",
+    "3": "俺の歩むべき道を邪魔して来た",
+    "4": "俺の周りを人間が群がって来た",
+    "5": "俺自身の輝きを隠せずにいた",
+    "6": "俺の尊さに空が泣いていた",
+    "7": "全ての生物の本能が俺を欲っしていた",
+    "8": "風が嫉妬して僕をこれ以上前に進めせてくれなかった",
+    "9": "サインを求められて女が群がっていた"
   }
 }
