--- a/src/public/json/reason.json
+++ b/src/public/json/reason.json
@@ -17,11 +17,11 @@
     "1": "飼っているペンギンが飛んで逃げたので探していた",
     "2": "俺の魅力で心肺停止した",
     "3": "俺の歩むべき道を邪魔して来た",
-    "4": "俺の周りを人間が群がって来た",
+    "4": "俺の周りを群がって来た",
     "5": "俺自身の輝きを隠せずにいた",
-    "6": "俺の尊さに空が泣いていた",
-    "7": "全ての生物の本能が俺を欲っしていた",
-    "8": "風が嫉妬して僕をこれ以上前に進めせてくれなかった",
-    "9": "サインを求められて女が群がっていた"
+    "6": "俺の尊さに泣いていた",
+    "7": "の本能が俺を欲っしていた",
+    "8": "嫉妬して僕をこれ以上前に進めせてくれなかった",
+    "9": "サインを求められて群がっていた"
   }
 }
