--- a/src/public/json/reason.json
+++ b/src/public/json/reason.json
@@ -20,7 +20,7 @@
     "4": "俺の周りを群がって来た",
     "5": "俺自身の輝きを隠せずにいた",
     "6": "俺の尊さに泣いていた",
-    "7": "の本能が俺を欲っしていた",
+    "7": "本能が俺を欲っしていた",
     "8": "嫉妬して僕をこれ以上前に進めせてくれなかった",
     "9": "サインを求められて群がっていた"
   }
