--- a/src/public/json/reason.json
+++ b/src/public/json/reason.json
@@ -18,10 +18,10 @@
     "2": "俺の魅力で心肺停止した",
     "3": "俺の歩むべき道を邪魔して来た",
     "4": "俺の周りを群がって来た",
-    "5": "俺自身の輝きを隠せずにいた",
+    "5": "俺の輝きに本能を隠せずにいた",
     "6": "俺の尊さに泣いていた",
-    "7": "本能が俺を欲っしていた",
-    "8": "嫉妬して僕をこれ以上前に進めせてくれなかった",
-    "9": "サインを求められて群がっていた"
+    "7": "俺を欲っしていた",
+    "8": "嫉妬して俺をこれ以上前に進めせてくれなかった",
+    "9": "サインを求めらきて群がっていた"
   }
 }
