--- a/src/public/json/reason.json
+++ b/src/public/json/reason.json
@@ -22,6 +22,6 @@
     "6": "俺の尊さに泣いていた",
     "7": "俺を欲っしていた",
     "8": "嫉妬して俺をこれ以上前に進めせてくれなかった",
-    "9": "サインを求めらきて群がっていた"
+    "9": "サインを求めてきて群がっていた"
   }
 }
