assetヘルパーでpublicディレクトリ配下が読み込まれないバグ修正

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         ports:
             - 3500:80
         volumes:
-            - ./:/var/www/public
+            - ./src:/var/www/public
             - ./docker/nginx/logs:/var/log/nginx/
             - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
 
